changes to spanish snark by user
Monotone-Parent: 55f5d0fc83165ee20c820ef1e2dc858110ae742c
Monotone-Revision: 3b6c4d6af6fae83cc9b7d42e8515804ae48ec675

Monotone-Author: m1xxy@mail.i2p
Monotone-Date: 2010-11-23T06:30:04
Monotone-Branch: i2p.i2p

--- a/apps/i2psnark/locale/messages_es.po
+++ b/apps/i2psnark/locale/messages_es.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: I2P i2psnark\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-11-13 00:19+0000\n"
-"PO-Revision-Date: 2010-11-22 17:49+0100\n"
+"PO-Revision-Date: 2010-11-23 01:50+0100\n"
 "Last-Translator: mixxy <m1xxy@mail.i2p>\n"
 "Language-Team: foo <foo@bar>\n"
 "MIME-Version: 1.0\n"
@@ -26,12 +26,12 @@ msgstr "Se añaden los torrents en {0} minutos ..."
 #: ../java/src/org/klomp/snark/SnarkManager.java:261
 #, java-format
 msgid "Total uploaders limit changed to {0}"
-msgstr "Número total de subida cambiado a {0}"
+msgstr "Límite del número total de subidores cambiado a {0}"
 
 #: ../java/src/org/klomp/snark/SnarkManager.java:263
 #, java-format
 msgid "Minimum total uploaders limit is {0}"
-msgstr "El mínimo de subidas es {0}"
+msgstr "El límite mínimo de subidores es {0}"
 
 #: ../java/src/org/klomp/snark/SnarkManager.java:275
 #, java-format
