--- a/history.txt
+++ b/history.txt
@@ -1,4 +1,7 @@
 2010-11-24 sponge
+    * Slackware, fix rc.i2p, bad logic.
+
+2010-11-24 sponge
     * Plugin: ticket 104 Fix webapp isRunning to check ALL webapps.
       The only defecency is that if one is running, that it considers the
       entire pliugin to be running. I'm not sure if that is a good thing
