--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+i2p (0.8.1-4) all; urgency=low
+  * I2P 0.8.1-6
+  * Closes: #448638
+ -- Hungry Hobo <HungryHobo@i2pmail.org>  Mon, 24 Nov 2010 17:14:57 +0000
+
+i2p (0.8.1-3) all; urgency=low
+  * I2P 0.8.1-3
+ -- Hungry Hobo <HungryHobo@i2pmail.org>  Mon, 21 Nov 2010 17:14:57 +0000
+
 i2p (0.8.1) all; urgency=low
   * Speedups
   * Bugfixes
