--- a/apps/desktopgui/TODO
+++ b/apps/desktopgui/TODO
@@ -1,8 +1,17 @@
+HIGH PRIORITY:
+- Allow desktopgui to start, stop and restart I2P. - DONE
+- Internationalisation
+- Correct logging system
+UNKNOWN:
 - API to allow applications to add themselves to the menu?
     * registerApplication(); -- should return a positive number on success, -1 on failure
     * unregisterApplication(int); -- should return nothing (or bool for success?), and the parameter should be the number given when registering the application
-- Internationalisation
 - Fetch I2P localhost from the core I2P application? 
-- Correct logging system
 - Use I2PAppContext::appDir (something like that) for desktopgui data.
-- Check core/java/src/net/i2p/util/FileUtil.java for dynamic jar loading
+- Consider SWT as option
+    * Check core/java/src/net/i2p/util/FileUtil.java for dynamic jar loading
+    * Possible logic:
+        - First try to load SWT (has the most options and is not ugly)
+        - Then load AWT
+- Access router.jar from other JVM? Is this possible? -- no: use I2CP with auth (not ready yet)
+- Start desktopgui with another user than the user starting I2P (required for daemon usage).
