--- a/history.txt
+++ b/history.txt
@@ -1,3 +1,6 @@
+2010-11-26 dr|z3d
+    * Readme: Overhaul layout and text.
+
 2010-11-25 dr|z3d
     * Console themes: Classic and Dark theme refresh.
     * Fix langbox overflow issue in all themes.
